@@ -4,40 +4,54 @@ import baristation.security.handler.OAuth2SuccessHandler;
 import baristation.security.jwt.JwtAuthenticationFilter;
 import baristation.security.jwt.JwtTokenProvider;
 import baristation.user.service.CustomOAuth2UserService;
-import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.security.autoconfigure.web.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.HandlerExceptionResolver;
 
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
-    /* [추가된 부분]
-       - requestMatchers 내부에 "/api/**" 추가하였습니다.
-    */
     private final CustomOAuth2UserService customOAuth2UserService;
     private final OAuth2SuccessHandler oAuth2SuccessHandler;
     private final JwtTokenProvider jwtTokenProvider;
+    private final HandlerExceptionResolver handlerExceptionResolver;
 
-// filterChain 메서드 내부 (logout 설정 아래 쯤에 추가)
+    @Autowired
+    public SecurityConfig(CustomOAuth2UserService customOAuth2UserService,
+                          OAuth2SuccessHandler oAuth2SuccessHandler,
+                          JwtTokenProvider jwtTokenProvider,
+                          @Qualifier("handlerExceptionResolver") HandlerExceptionResolver handlerExceptionResolver) {
+        this.customOAuth2UserService = customOAuth2UserService;
+        this.oAuth2SuccessHandler = oAuth2SuccessHandler;
+        this.jwtTokenProvider = jwtTokenProvider;
+        this.handlerExceptionResolver = handlerExceptionResolver;
+    }
+
+    @Value("${app.frontend.base-url}")
+    private String frontendBaseUrl;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) {
         http
                 // CSRF 비활성화 - 개발 단계 및 OAuth2 연동 테스트 임시 설정
-                .csrf(csrf -> csrf.disable())
+                .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정 적용
 
                 // 세션 설정 - JWT 사용하므로 세션은 Stateless로 설정
@@ -48,30 +62,18 @@ public class SecurityConfig {
                         .requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
                         .requestMatchers(
                                 "/",
-                                "/signin",
-                                "/beans/**",
-                                "/classes/**",
-                                "/oauth2/**",
-                                "/login/**",   // 구글 리디렉션 도착 경로 허용
-                                "/api/beans/**",
-                                "/api/lessons/**",
-                                "/api/auth/refresh",
-                                // swagger 경로
-                                "/swagger-custom-ui.html",
-                                "/swagger-ui/**",
-                                "/api-docs",
-                                "/api-docs/**",
-                                "/actuator/health",
-                                "/actuator/health/**"
-
+                                "/index.html",
+                                "/favicon.ico",
+                                "/assets/**",
+                                "/css/**",
+                                "/js/**",
+                                "/images/**"
                         ).permitAll()
-                        .requestMatchers(
-                                "/api/auth/**"
-                        ).authenticated()  // 인증 필수
-                        .requestMatchers(
-                                "/mypage/**"
-                        ).authenticated()
-                        .anyRequest().authenticated() // 나머지는 로그인한 유저만
+                        .requestMatchers("/oauth2/**", "/login/oauth2/**").permitAll()
+                        .requestMatchers("/api/auth/refresh").permitAll()
+                        .requestMatchers("/api/auth/**").authenticated()  // refresh 제외한 auth는 인증 필수
+                        .requestMatchers("/mypage/**").authenticated()
+                        .anyRequest().permitAll() // 나머지는 모두 공개
                 )
                 // OAuth2 로그인 설정
                 .oauth2Login(oauth -> oauth
@@ -80,16 +82,17 @@ public class SecurityConfig {
                         )
                         // 리액트로 리다이렉트 시키기 위해 SuccessHandler를 연결
                         .successHandler(oAuth2SuccessHandler)
-//                        .defaultSuccessUrl("http://localhost:3000/oauth2/redirect", true)
                 )
 
                 // 로그아웃 설정
                 .logout(logout -> logout
-                        .logoutSuccessUrl("http://localhost:3000/") // 로그아웃 후 리액트 메인으로
-                        .deleteCookies("JSESSIONID")
+                        .logoutSuccessUrl(frontendBaseUrl) // 로그아웃 후 리액트 메인으로
                 );
 
-        http.addFilterBefore(new JwtAuthenticationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class);
+            http.addFilterBefore(
+                    new JwtAuthenticationFilter(jwtTokenProvider, handlerExceptionResolver),
+                    UsernamePasswordAuthenticationFilter.class
+            );
         return http.build();
     }
 
@@ -97,10 +100,14 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // 리액트 주소 허용
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true); // 쿠키/인증 정보 허용
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:3000",
+                "http://localhost:3001",
+                frontendBaseUrl
+        ));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        configuration.setAllowedHeaders(Collections.singletonList("*"));
+        configuration.setAllowCredentials(true); // 쿠키를 사용하여 true로 수정
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
